<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_test">test</string>
    <string name="title_activity_search">Search Images</string>
    <string name="hint_search_text">Enter your search</string>
    <string name="btn_search">Search</string>
    <string name="txt_image_title">Image Title</string>
    <string name="title_activity_picture_detail">PictureDetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lbl_advanced_search">Advanced Search Options</string>
    <string name="lbl_image_size">Image Size</string>
    <string name="lbl_color_filter">Color Filter</string>
    <string name="lbl_image_type">Image Type</string>
    <string name="lbl_site_filter">Site Filter</string>
    <string name="btn_save">Save</string>
</resources>
