<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.rneel.gridimagesearch.view.SettingsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_advanced_search"
        android:id="@+id/lblAdvancedSearch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_image_size"
        android:id="@+id/lblImageSize"
        android:layout_below="@+id/lblAdvancedSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/MentionText"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_color_filter"
        android:id="@+id/lblColorFilter"
        android:layout_below="@+id/lblImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/MentionText"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_image_type"
        android:id="@+id/lblImageType"
        android:layout_below="@+id/lblColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/MentionText"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_site_filter"
        android:id="@+id/lblSiteFilter"
        android:layout_below="@+id/lblImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/MentionText"
         />

    <Button
        android:text="@string/btn_save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/lblSiteFilter"
        android:layout_centerHorizontal="true"
        style="@style/WhiteOnBlackButton"
        android:layout_marginTop="35dp"
        android:onClick="onSaveClick"
        />

    <Spinner
        android:id="@+id/spinnerImageSize"
        style="@style/SettingSpinner"
        android:entries="@array/image_size_array"
        android:layout_toRightOf="@+id/lblImageType"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/lblImageSize" />

    <Spinner
        android:id="@+id/spinnerColorFilter"
        style="@style/SettingSpinner"
        android:entries="@array/image_color_array"
        android:layout_toRightOf="@+id/lblImageType"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/lblColorFilter" />

    <Spinner
        android:id="@+id/spinnerImageType"
        style="@style/SettingSpinner"
        android:entries="@array/image_type_array"
        android:layout_toRightOf="@+id/lblImageType"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/lblImageType" />
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:background="@drawable/shape_fancy_text"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/lblSiteFilter"
        android:layout_alignLeft="@+id/spinnerImageType" />

</RelativeLayout>
